2013-02-25 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.31
	* add support for passing specific directory to search within buildroot
	  as argument to clean_perl
	* make fix_eol strip away buildroot from second argument if specified

2013-02-21 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.30
	* only try removing rpath from dynamically linked ELF binaries

2013-02-14 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.29
	* fix check for existence of directory specified to fix_eol, exit
	  without error if not existing

2013-02-14 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.28
	* add support for passing specific directory to search within buildroot
	  as argument to fix_eol

2013-02-13 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.27

	* fix issue with 'ln' trying to follow destination of source, if it
	  exists as a symlink

2013-02-08 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.26

	* fix the actual regression in fix_file_permissions

2013-02-01 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.25

	* remove rpaths that has standard library search dirs from binaries
	* fix_file_permissions now fixes permissions of man & info pages

2013-01-12 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.23

	* fix_file_permissions should fix library file permissions to be 755

2013-01-06 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.22

	* don't run fix_eol together with other helpers after %install,
	  as it'll be run after %doc in stead

2012-12-26 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.21

	* drop compress-files in favour of upstream brp-compress

2012-12-25 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.20

	* add missing trailing semicolons to XDG *.desktop files
	  (from Denis Silakov)

2012-12-19 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.19

	* rewrite check_elf_files in shell script
	* skip symlinks for fix_eol

2012-12-19 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.18

	* make sure fix_eol doesn't exit with error code
